@@ -7,79 +7,108 @@ import Hwai_team.UniTime.domain.course.dto.CourseSearchCond;
 import Hwai_team.UniTime.domain.course.entity.Course;
 import Hwai_team.UniTime.domain.course.repository.CourseRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;   // ✅ 여기가 핵심 import
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional(readOnly = true)
 public class CourseService {
 
     private final CourseRepository courseRepository;
 
-    // 전체 + 조건 검색
+    @Transactional(readOnly = true)
     public List<CourseResponse> searchCourses(CourseSearchCond cond) {
-        List<Course> courses;
-
-        // 조건 조합 간단하게 처리
-        if (cond.getGradeYear() != null && cond.getCategory() != null) {
-            courses = courseRepository.findByGradeYearAndCategory(
-                    cond.getGradeYear(), cond.getCategory()
-            );
-        } else if (cond.getGradeYear() != null) {
-            courses = courseRepository.findByGradeYear(cond.getGradeYear());
-        } else if (cond.getKeyword() != null && !cond.getKeyword().isBlank()) {
-            courses = courseRepository.findByNameContainingIgnoreCase(cond.getKeyword());
-        } else {
-            courses = courseRepository.findAll();
+        // 기본: 필터 없으면 전체 반환
+        if (cond.getGradeYear() == null && cond.getCategory() == null && cond.getKeyword() == null) {
+            return courseRepository.findAll()
+                    .stream()
+                    .map(CourseResponse::from)
+                    .collect(Collectors.toList());
         }
 
-        return courses.stream()
-                .map(CourseResponse::new)
-                .toList();
+        // 조합 필터링
+        if (cond.getGradeYear() != null && cond.getCategory() != null) {
+            return courseRepository.findByRecommendedGradeAndCategory(cond.getGradeYear(), cond.getCategory())
+                    .stream()
+                    .map(CourseResponse::from)
+                    .collect(Collectors.toList());
+        } else if (cond.getGradeYear() != null) {
+            return courseRepository.findByRecommendedGrade(cond.getGradeYear())
+                    .stream()
+                    .map(CourseResponse::from)
+                    .collect(Collectors.toList());
+        } else if (cond.getKeyword() != null) {
+            return courseRepository.findByNameContainingIgnoreCase(cond.getKeyword())
+                    .stream()
+                    .map(CourseResponse::from)
+                    .collect(Collectors.toList());
+        }
+
+        return courseRepository.findAll()
+                .stream()
+                .map(CourseResponse::from)
+                .collect(Collectors.toList());
     }
 
+    @Transactional(readOnly = true)
     public CourseResponse getCourse(Long id) {
         Course course = courseRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 과목입니다. id=" + id));
-        return new CourseResponse(course);
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 강의입니다. id=" + id));
+        return CourseResponse.from(course);
     }
 
     @Transactional
     public CourseResponse createCourse(CourseRequest request) {
         Course course = Course.builder()
-                .gradeYear(request.getGradeYear())
-                .category(request.getCategory())
                 .courseCode(request.getCourseCode())
                 .name(request.getName())
-                .section(request.getSection())
+                .recommendedGrade(request.getRecommendedGrade())
+                .category(request.getCategory())
                 .credit(request.getCredit())
-                .professor(request.getProfessor())
+                .hours(request.getHours())
+                .department(request.getDepartment())
                 .dayOfWeek(request.getDayOfWeek())
                 .startPeriod(request.getStartPeriod())
                 .endPeriod(request.getEndPeriod())
+                .professor(request.getProfessor())
                 .room(request.getRoom())
+                .section(request.getSection())
                 .build();
 
-        return new CourseResponse(courseRepository.save(course));
+        Course saved = courseRepository.save(course);
+        return CourseResponse.from(saved);
     }
 
     @Transactional
     public CourseResponse updateCourse(Long id, CourseRequest request) {
         Course course = courseRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 과목입니다. id=" + id));
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 강의입니다. id=" + id));
 
-        // setter 안 만들었으니, 빌더 패턴으로 교체하거나, 엔티티에 변경 메서드 만들어도 됨.
-        // 여기서는 간단하게 엔티티에 값 세팅하는 메서드 하나 추가했다고 가정할게.
         course.updateFromRequest(request);
-
-        return new CourseResponse(course);
+        return CourseResponse.from(course);
     }
 
     @Transactional
     public void deleteCourse(Long id) {
         courseRepository.deleteById(id);
+    }
+
+    // 확장용 (페이징 포함 검색)
+    @Transactional(readOnly = true)
+    public Page<CourseResponse> getCourses(
+            String q, String department, String category,
+            Integer grade, Integer credit, String dayOfWeek,
+            int page, int size, Sort sort
+    ) {
+        Pageable pageable = PageRequest.of(page, size, sort);
+        return courseRepository.search(q, department, category, grade, credit, dayOfWeek, pageable)
+                .map(CourseResponse::from);
     }
 }
